[gd_scene load_steps=5 format=3 uid="uid://b4oenh8ay7f65"]

[ext_resource type="Texture2D" uid="uid://fne4wvj2ygl8" path="res://Map/InventoryFolder/InventoryArt/inventoryBox.png" id="1_3jt17"]
[ext_resource type="Script" uid="uid://dqvojudyb805x" path="res://Map/Scripts/return_home.gd" id="1_m17ta"]
[ext_resource type="Texture2D" uid="uid://0xuvl0kii6sy" path="res://Map/Art/shop.png" id="2_m17ta"]

[sub_resource type="CircleShape2D" id="CircleShape2D_p2gyn"]
radius = 20.0

[node name="ReturnHome" type="Node2D"]
script = ExtResource("1_m17ta")

[node name="ReturnHomeArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ReturnHomeArea"]
shape = SubResource("CircleShape2D_p2gyn")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
offset_left = -8.0
offset_top = -15.0
offset_right = 8.0
offset_bottom = -7.0
texture = ExtResource("1_3jt17")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="ShopSign" type="Sprite2D" parent="NinePatchRect"]
position = Vector2(8, 4)
scale = Vector2(0.433333, 0.35)
texture = ExtResource("2_m17ta")

[connection signal="body_entered" from="ReturnHomeArea" to="." method="_on_return_home_area_body_entered"]
[connection signal="body_exited" from="ReturnHomeArea" to="." method="_on_return_home_area_body_exited"]
[connection signal="input_event" from="ReturnHomeArea" to="." method="_on_return_home_area_input_event"]
